--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -87,6 +87,9 @@ h6, small, .atk-size-milli {
 // Text Styles
 // ==========================================================
 
+[data-text*=heading] {
+    font-family: @headingFamily;
+}
 [data-text*=lead] {
     line-height: @headingBaseline;
 }
