--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -15,31 +15,13 @@
 .ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
     .border-top-left-radius(@cornerRadius);
 }
-.ui-state-default {
-    // &, a:link, a:visited {
-    //     color: @bodyColor;
-    // }
-    &,
-    .ui-widget-content &,
-    .ui-widget-header & {
-        // .buttonDefault;
-        &.ui-state-hover {
-            // .buttonHover;
-        }
-        &.ui-state-active, &.ui-state-focus {
-            // .buttonActive;
-        }
-    }
-}
 .ui-state-hover,
 .ui-widget-content .ui-state-hover,
 .ui-widget-header .ui-state-hover,
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
-    background: #eee;
-    // border-color: @borderStatic;
-    // color: @bodyColor;
+    background: @inputFocus;
     font-weight: bold;
 }
 .ui-button {
@@ -48,7 +30,6 @@
     }
 }
 .ui-widget {
-    // color: @bodyColor;
     font-size: 1em;
     &, input, select, textarea, button {
         font-family: @bodyFamily;
@@ -57,20 +38,9 @@
 .ui-widget-header {
     .clear-area;
     color: inherit;
-    // .ui-state-hover {
-    //     background: @buttonHover;
-    // }
 }
 .ui-widget-content {
-    background: #fff;
-    // border-color: @borderOverlay;
     color: inherit;
-    // a {
-    //     color: @linkColor;
-    //     &:hover {
-    //         color: @linkColorHover;
-    //     }
-    // }
 }
 .ui-widget-overlay {
     .opacity(100);
@@ -96,7 +66,6 @@
 }
 .ui-selectmenu-menu {
     .ui-menu {
-        // border: 1px solid @borderOverlay;
         border-top-width: 0;
         max-height: 240px;
         overflow: auto;
@@ -109,11 +78,9 @@
     }
 }
 .ui-datepicker {
-    // border-color: @borderOverlay;
     padding: round(@margin/2,2);
     .ui-datepicker-header {
         border: none;
-        // color: #000;
         line-height: @bodyBaseline;
         margin: round(@margin/4,2) 0 round(@margin/1.5,2) 0;
         padding: 0;
@@ -162,7 +129,6 @@
 
         }
         .ui-datepicker-next {
-            // float: right;
             right: 0;
         }
         .ui-datepicker-prev {
@@ -220,7 +186,6 @@
     .clear-area;
     .ui-tabs-nav.ui-widget-header {
         border-radius: @cornerRadius @cornerRadius 0 0;
-        // border-bottom: 1px solid @borderClickable;
         padding: 0;
         .ui-state-default {
             .box-shadow(none);
@@ -234,13 +199,11 @@
             }
             &.ui-state-active {
                 background: #fff;
-                // border-color: @borderClickable;
             }
         }
     }
     .ui-tabs-panel.ui-widget-content {
         background: @boxColor;
-        // border: 1px solid @borderStatic;
         padding: round(@margin/2,2) 0;
         &[class*=atk-box] {
             border-radius: 0 0 @cornerRadius @cornerRadius !important;
@@ -260,16 +223,12 @@
             margin-top: -0.5em;
         }
         &.ui-state-active {
-            // background: @boxColor;
-            // border-color: @borderStatic;
-            // border-bottom-color: @boxColor;
             &, +.ui-accordion-content {
                 .box-shadow(none);
             }
         }
     }
     .ui-accordion-content {
-        // border-color: @borderStatic;
         padding: round(@margin/2,2);
         + .ui-accordion-header {
             margin-top: 0.2em;
@@ -288,7 +247,6 @@
         .ui-button.ui-dialog-titlebar-close {
             .clear-area;
             .position(@t:round(@margin/4,2), @r:round(@margin/4,2));
-            // color: tint(@bodyColor, 80%);
             .ui-button-text {
                 display: none;
             }
@@ -297,19 +255,15 @@
                 margin-right: -0.2rem;
                 width: auto;
             }
-            // &:hover {
-            //     color: tint(@bodyColor, 40%);
-            // }
         }
     }
     >.ui-widget-content {
         background: none;
         border:none;
         .ui-dialog-buttonset {
-            border-top: 1px solid @borderStatic;
             padding: round(@margin/2,2) @margin;
             >* + * {
-                margin-left: @space;
+                margin-left: @space-xs;
             }
         }
         &.ui-dialog-content {
